--- a/style.html
+++ b/style.html
@@ -67,6 +67,7 @@ body {
   font-family: 'Inter', sans-serif;
   background-color: #f6c453; //yellow
   min-height: 100vh;
+  padding: 10px 20px;
 }
 
 .hidden {
@@ -75,33 +76,38 @@ body {
 
 /* ===== DASHBOARD LAYOUT ===== */
 
+/*
 html, body {
   background-color: #FFF6BF;
 }
 
 .dashboard-wrapper {
   box-shadow: inset 0 0 0 1px rgba(0,0,0,0.04);
-}
+}*/
 
-/*
+/* ===== Global page ===== */
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
-  background: #FFF6BF; 
+  min-height: 100%;        /* ✅ allow growth */
+  background: #FFF6BF;
+  overflow-y: auto;       /* ✅ enable scrolling */
 }
-.dashboard-wrapper {
-  min-height: 100vh;
-}*/
 
+/* ===== App wrapper ===== */
+.dashboard-wrapper {
+  min-height: 100vh;      /* ✅ at least viewport height */
+  background: var(--bg-lighter);
+  border-radius: 0;
+}
 
 
 .dashboard-card {
   background: #fffceb;
   border-radius: 0;        /* 🔥 remove rounding */
   box-shadow: none;        /* 🔥 optional: remove floating look */
-  min-height: 98vh;
+  min-height: 100vh;
   display: flex;
 }
 
@@ -2476,15 +2482,6 @@ modal-overlay.schedule-modal{
   margin-bottom: 10px;
 }
 
-.saving-state {
-  color: #28a745 !important;   /* Green text */
-  
-}
-
-button:disabled {
-  cursor: not-allowed;
-}
-
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -3107,12 +3104,12 @@ button:disabled {
 .stats-row {
   display: flex;
   gap: 28px;
-  margin-bottom:8px;
+  margin-bottom: 20px;
 }
 
 /* card */
 .stat-box {
-  background: #ffffff;
+  background: #f7f7f7;
   border-radius: 14px;
   padding: 15px;
   display: flex;
@@ -3120,6 +3117,7 @@ button:disabled {
   gap: 16px;
   min-width: 260px;
 
+  box-shadow: 0 8px 18px rgba(0,0,0,0.08);
 }
 
 /* icon container (square bg) */
@@ -3164,19 +3162,12 @@ button:disabled {
 /* ===== HEADER ===== */
 .header-bar {
   padding:20px;
-  background-color:#ffffff;
+  background-color:#fff;
   border-radius:20px;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-
-.header-bar h2{
-  font-size: 25px;
-  font-weight: 600;
-  color: #111;
 }
 
 .header-actions {
@@ -3357,18 +3348,8 @@ button:disabled {
 #ScheduledCandidatePoolContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* ✅ 4 cards per row */
-  gap: 10px;
-  padding: 20px;
-   overflow-y: auto;
-  max-height: calc(100vh - 230px);
-  
-  min-height: calc(100vh - 230px);
-  background-color: #fff;
-
-  border-radius:20px;
-
-  margin-top:8px;
- 
+  gap: 18px;
+  padding: 10px;
 }
 
 .scheduled-card {
@@ -3553,8 +3534,6 @@ button:disabled {
   background: #fff;
   border-radius: 10px;     /* rounded corners */
   border: 1px solid #e5e5e5; /* optional border */
-
-  margin-top:8px;
 
 }
 
@@ -3806,12 +3785,6 @@ button:disabled {
 .scheduled-more-btn:hover {
   color: #000;
 }
-
-.scheduled-card:nth-child(4n) .scheduled-more-dropdown,.selected-candidate-card:nth-child(4n) .scheduled-more-dropdown {
-  left: auto;
-  right: 20px;
-}
-
 
 .scheduled-more-dropdown {
   position: absolute;
@@ -4184,7 +4157,7 @@ button:disabled {
 .scheduled-confirmation {
   position: fixed;
   inset: 0;
-  z-index: 99999999; /* higher than all other modals */
+  z-index: 20000; /* higher than all other modals */
   display: none;
 }
 
@@ -4346,13 +4319,11 @@ button:disabled {
 
 
 /* =========================================SELECTED POOL=========================================== */
-
-
 .selected-stats-wrapper {
   display: flex;
   gap: 28px;
   background: #fffceb;
-  margin-bottom:10px;
+  margin-bottom:15px;
 }
 
 .selected-stat-box {
@@ -4362,9 +4333,7 @@ button:disabled {
   display: flex;
   align-items: center;
   gap: 16px;
-  min-width: 210px;
-  min-height: 76px;
-  
+  min-width: 220px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
 }
 
@@ -4400,7 +4369,7 @@ button:disabled {
 }
 
 .selected-head-title {
-  font-size: 25px;
+  font-size: 28px;
   font-weight: 600;
   color: #111;
 }
@@ -4428,7 +4397,7 @@ button:disabled {
   height: 40px;
   border-radius: 8px;
   border: 1px solid #cfcfcf;
-  background: #F9FAFB;
+  background: #f4f4f4;
   cursor: pointer;
   font-size: 16px;
 }
@@ -4437,7 +4406,7 @@ button:disabled {
 .selected-head-tabs {
   display: flex;
   align-items: center;
-  background: #F8F8FA;
+  background: #e5e5e5;
   padding: 4px;
   border-radius: 12px;
   gap: 4px;
@@ -4518,29 +4487,12 @@ button:disabled {
 }
 
 /* ===== GRID CONTAINER ===== */
-/* #selectedCandidatePoolContainer { */
-  /* display: grid; */
-  /* grid-template-columns: repeat(4, 320px); 4 cards per row */
-  /* gap: 15px; */
-  /* justify-content: start; */
-  /* padding: 10px 0; */
-/* } */
-
 #selectedCandidatePoolContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  gap: 17px;
-
-  padding: 20px;
-  overflow-y: auto;
-  overflow-x: hidden;
-
-  max-height: calc(100vh - 230px);
-  min-height: calc(100vh - 230px);
-
-  background-color: #fff;
-  border-radius: 20px;
-  margin-top: 8px;
+  grid-template-columns: repeat(4, 332px); /* 4 cards per row */
+  gap: 24px;
+  justify-content: start;
+  padding: 10px 0;
 }
 
 /* ===== CARD WRAPPER ===== */
@@ -4549,9 +4501,9 @@ button:disabled {
   border: 1px solid #000;
   border-radius: 18px;
   padding: 16px;
+  margin-bottom: 16px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.04);
-  max-width: 322px;
-  max-height:200px;
+  max-width: 360px;
 }
 
 /* ===== HEADER ===== */
@@ -4603,9 +4555,8 @@ button:disabled {
 
 .selected-candidate-card:hover {
   box-shadow: 0 8px 20px rgba(255, 152, 0, 0.35);
- 
+  transform: translateY(-2px);
 }
-
 
 
 /* ===== META SECTION ===== */
@@ -4832,18 +4783,17 @@ button:disabled {
 
 .retention-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-  gap: 26px;
-  align-items: start;
+  gap: 24px;
+
+  /* 4 cards on desktop */
+  grid-template-columns: repeat(4, 1fr);
 }
 
-/* ================= Retention Card ================= */
 
+/* ================= Retention Card ================= */
 .retention-card {
-  max-width: 360px;       /* prevents full-width stretching */
   width: 100%;
   justify-self: start;
-
   border: 2px solid #d1d5db;
   border-radius: 18px;
   padding: 20px;
@@ -4851,9 +4801,10 @@ button:disabled {
 
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  height: 100%;
 
   transition: all 0.2s ease;
+  position: relative;
 }
 
 .retention-card:hover {
@@ -4885,6 +4836,13 @@ button:disabled {
   margin-top: 4px;
 }
 
+.retention-progress {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+   min-height: 54px;      /* 🔥 ensures consistent spacing */
+}
+
 /* ================= Package Button ================= */
 
 .package-btn {
@@ -4904,11 +4862,6 @@ button:disabled {
 
 /* ================= Progress Section ================= */
 
-.retention-progress {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
 
 .progress-label {
   display: flex;
@@ -4998,182 +4951,389 @@ button:disabled {
   cursor: pointer;
 }
 
-/* ------------------------------skelton loading schedule-------------------------------- */
-/* Container layout */
-/* Grid Container */
-.scheduled-card-container {
-  display: grid;
-  grid-template-columns: repeat(4, 320px); /* 4 cards per row */
-  gap: 10px 20px;
-  justify-content: space-between;
-  /* margin:0px 8px; */
-}
 
-/* Skeleton Card */
-.scheduled-card-skeleton {
-  border: 3px solid #e5e7eb;
-  background: #ffffff;
-  pointer-events: none;
-  margin-right:10px;
-}
+/* ===== Exit Modal ===== */
 
-/* Skeleton Base */
-.skeleton {
-  background: linear-gradient(
-    90deg,
-    #eeeeee 25%,
-    #e0e0e0 37%,
-    #eeeeee 63%
-  );
-  background-size: 400% 100%;
-  animation: shimmer 1.4s ease infinite;
-  border-radius: 6px;
-}
+/* ===== FORCE Exit Modal to top ===== */
 
-/* Shimmer animation */
-@keyframes shimmer {
-  0% {
-    background-position: 100% 0;
-  }
-  100% {
-    background-position: -100% 0;
-  }
-}
 
-/* Header Skeleton */
-.skeleton-title {
-  width: 60%;
-  height: 18px;
-  margin-bottom: 2px;
-}
-
-.skeleton-subinfo {
-  width: 40%;
-  height: 14px;
-  margin-bottom: 2px;
-}
-
-/* Interview Info Box */
-.skeleton-info-box {
-  background: #f3f4f6;
-  padding: 12px;
-  border-radius: 8px;
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  gap: 8px;
+.exit-modal-backdrop {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: none;            /* ALWAYS hidden by default */
   align-items: center;
-  margin-bottom: 12px;
+  justify-content: center;
+  z-index: 999999;
 }
 
-.skeleton-icon {
-  width: 36px;
-  height: 36px;
-  border-radius: 10px;
-  margin-top:8px;
+.exit-modal-backdrop.active {
+  display: flex;            /* ONLY when active */
 }
 
-.skeleton-line {
+.exit-modal-box {
+  background: #f2f2f2;
+  border-radius: 18px;
+  padding: 28px;
+  width: 360px;
+  text-align: center;
+}
+
+.exit-modal-box.wide {
+  width: 420px;
+}
+
+/*popover styling*/
+.package-popover {
+  position: absolute;
+  top: 48px;           /* below Package button */
+  right: 20px;         /* aligned to right edge */
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 12px 14px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+  z-index: 10;
+  min-width: 180px;
+}
+
+.package-popover.hidden {
+  display: none;
+}
+
+.package-popover-content {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;                        /* ⬇ tighter spacing */
+}
+
+.pkg-label {
+  font-size: 11px;                 /* ⬇ smaller label */
+  color: #6b7280;
+  font-weight: 500;
+}
+
+.pkg-value {
+  font-size: 18px;                 /* ⬇ smaller value */
+  font-weight: 700;
+  color: #111827;
+}
+
+
+.package-popover::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  right: 16px;
+  width: 12px;
   height: 12px;
-  width: 100%;
+  background: white;
+  transform: rotate(45deg);
+  box-shadow: -3px -3px 6px rgba(0,0,0,0.05);
 }
 
-.skeleton-line.short {
-  width: 60%;
+.exit-form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 16px;
 }
 
-.skeleton-line.small {
-  width: 40%;
+.exit-form-field label {
+  font-size: 14px;
+  font-weight: 500;
+  color: #111827;
 }
 
-.skeleton-badge {
-  width: 70px;
-  height: 20px;
-  border-radius: 6px;
+.exit-form-field select,
+.exit-form-field input {
+  height: 42px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid #d1d5db;
+  font-size: 14px;
+  background: #ffffff;
 }
 
-/* Footer */
-.skeleton-footer {
+/* space  betweennb utton and date*/
+.conf-modal-buttons {
+  margin-top: 32px;
+}
+
+/* ================= FIXED CARD ALIGNMENT ================= */
+
+/* Ensure grid stretches cards equally */
+.retention-grid {
+  align-items: stretch;
+}
+
+/* Card must fill grid cell */
+.retention-card {
+  height: 100%;
+}
+
+/* Lock header height so all cards align */
+.retention-card-header {
+  min-height: 64px;
+}
+
+/* Prevent name & company from changing layout */
+.retention-name,
+.retention-company {
+  line-height: 1.2;
+  max-height: 2.4em;      /* max 2 lines */
+  overflow: hidden;
+}
+
+/* Normalize progress section height */
+.retention-progress {
+  min-height: 54px;
+}
+
+/* Keep progress label aligned */
+.progress-label {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+/* Push actions to bottom consistently */
+.retention-actions {
   margin-top: auto;
 }
 
-.skeleton-btn-small {
-  width: 60px;
-  height: 39px;
-  border-radius: 8px;
-  margin-right:5px;
+/* Controlled vertical spacing */
+.retention-card-header {
+  margin-bottom: 14px;
 }
 
-.skeleton-btn-large {
-  width: 210px;
-  height: 39px;
-  border-radius: 8px;
+.retention-progress {
+  margin-bottom: 12px;
 }
 
-/* ----------------------------------skeleton loading selecetd--------------- */
-/* ===== SKELETON BASE ===== */
-.selected-skeleton-card {
-  width: 332px;
-  height: 200px;   /* reduced height */
-  padding: 16px;
-  pointer-events: none;
-  border:1px solid #e5e7eb;
+/*top bar*/
+.section-body.hidden {
+  display: none;
 }
 
-.skeleton {
-  background: linear-gradient(
-    90deg,
-    #eeeeee 25%,
-    #e0e0e0 37%,
-    #eeeeee 63%
-  );
-  background-size: 400% 100%;
-  animation: shimmer 1.4s ease infinite;
-  border-radius: 6px;
+.section-header i {
+  transition: transform 0.25s ease;
 }
 
-@keyframes shimmer {
-  0% { background-position: 100% 0; }
-  100% { background-position: -100% 0; }
+.section-header i.rotated {
+  transform: rotate(180deg);
 }
 
-/* ===== HEADER SKELETON ===== */
-.skeleton-name {
-  width: 160px;
-  height: 18px;
-  margin-bottom: 8px;
+
+/* ================= COMPLETED CARD LAYOUT ================= */
+
+.retention-card.is-completed {
+  border-color: #9ca3af;
 }
 
-.skeleton-phone {
-  width: 120px;
-  height: 14px;
+/* Top-right completed text */
+.retention-card.is-completed .status-text {
+  color: #22c55e;
+  font-weight: 600;
 }
 
-.skeleton-menu {
-  width: 10px;
-  height: 20px;
-  border-radius: 5px;
-}
-
-/* ===== DATE BOX ===== */
-.skeleton-date-box {
+/* Progress bar full green */
+.retention-card.is-completed .progress-fill {
   width: 100%;
-  height: 50px;
-  margin: 16px 0;
-  border-radius: 12px;
+  background: #22c55e;
 }
 
-/* ===== BUTTON ===== */
-.skeleton-footer {
+/* Button styling */
+.retention-card.is-completed .complete-btn {
+  background: #22c55e;
+  color: #ffffff;
+  cursor: default;
+}
+
+/* Remove hover jump for completed */
+.retention-card.is-completed:hover {
+  transform: none;
+  box-shadow: none;
+}
+
+.danger-btn.disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.retention-card {
+  border-radius: 22px;              /* softer corners */
+  padding: 22px;
+}
+
+.retention-card.is-completed {
+  background: #ffffff;
+}
+
+.retention-card {
+  border-radius: 22px;              /* softer corners */
+  padding: 22px;
+}
+
+.retention-card.is-completed {
+  background: #ffffff;
+}
+
+/* === Fix empty space in retention sections === */
+.retention-section {
+  height: auto;
+}
+
+.section-body {
+  padding-bottom: 16px;   /* reduce from large default */
+}
+
+.retention-grid {
+  align-content: start;   /* 🔥 prevents grid from stretching */
+}
+
+
+.retention-card {
+  padding: 16px;          /* ↓ from 20–22px */
+}
+
+.retention-name {
+  font-size: 15px;        /* ↓ from 16px */
+  line-height: 1.2;
+}
+
+.retention-company {
+  font-size: 12px;        /* ↓ from 13px */
+  line-height: 1.2;
+  margin-top: 2px;        /* ↓ from 4px */
+}
+
+.retention-card-header {
+  min-height: 56px;       /* ↓ from 64px */
+}
+.retention-progress {
+  min-height: 44px;       /* ↓ from ~54px */
+}
+
+.progress-label {
+  font-size: 11px;        /* ↓ from 12px */
+}
+.progress-bar {
+  height: 6px;            /* ↓ from 7px */
+}
+.complete-btn {
+  height: 34px;           /* ↓ from 38px */
+  font-size: 12px;
+}
+
+.danger-btn {
+  width: 34px;            /* ↓ from 38px */
+  height: 34px;
+}
+
+/* package button */
+
+.package-btn.icon-btn {
+  width: 36px;
+  height: 36px;
+  padding: 0;
+
   display: flex;
+  align-items: center;
   justify-content: center;
+
+  border-radius: 10px;
+  font-size: 14px;
 }
 
-.skeleton-button {
-  width: 160px;
-  height: 45px;
-  border-radius: 25px;
+.package-btn.icon-btn i {
+  pointer-events: none;
+}
+
+.package-btn.icon-btn:hover {
+  background: #f9fafb;
+}
+
+.package-btn.icon-btn {
+  color: #374151;
+}
+.package-btn.icon-btn:hover {
+  color: #111827;
+}
+
+/* ================= FINAL CARD COMPACTION FIX ================= */
+
+/* 1. Stop cards from stretching */
+.retention-card {
+  height: auto !important;
+  padding: 14px !important;
+}
+
+/* 2. Remove forced minimum heights */
+.retention-card-header {
+  min-height: unset !important;
+  margin-bottom: 10px;
+}
+
+.retention-progress {
+  min-height: unset !important;
+  margin-bottom: 10px;
+}
+
+/* 3. Stop pushing actions artificially */
+.retention-actions {
+  margin-top: 10px !important;
+}
+
+/* 4. Tighten header text */
+.retention-name {
+  font-size: 14px;
+  line-height: 1.15;
+}
+
+.retention-company {
+  font-size: 11.5px;
+  margin-top: 2px;
+}
+
+/* 5. Slim progress bar area */
+.progress-label {
+  font-size: 11px;
+}
+
+.progress-bar {
+  height: 5px;
+}
+
+/* 6. Slim buttons */
+.complete-btn {
+  height: 32px;
+  font-size: 12px;
+}
+
+.danger-btn {
+  width: 32px;
+  height: 32px;
+}
+
+/* 7. Ensure grid does not add vertical space */
+.retention-grid {
+  align-content: start;
+}
+
+/* ================= Hover Highlight ================= */
+
+.retention-card {
+  transition: box-shadow 0.25s ease, border-color 0.25s ease;
+}
+
+.retention-card:hover {
+  border-color: #22c55e; /* green border */
+  box-shadow:
+    0 0 0 3px rgba(34, 197, 94, 0.18),
+    0 10px 26px rgba(34, 197, 94, 0.25);
 }
 
 </style>
+
+
