--- a/main.html
+++ b/main.html
@@ -5881,7 +5881,7 @@ document.addEventListener("click", function (e) {
   const card = btn.closest(".retention-card");
   const popover = card.querySelector(".package-popover");
 
-  // Close all other popovers
+  // Close all other popovers hello
   document
     .querySelectorAll(".package-popover")
     .forEach(p => {
