--- a/style.html
+++ b/style.html
@@ -5261,7 +5261,7 @@ modal-overlay.schedule-modal{
   color: #111827;
 }
 
-/* ================= FINAL CARD COMPACTION FIX ================= */
+/* ================= FINAL CARD COMPACTION FIX =================- */
 
 /* 1. Stop cards from stretching */
 .retention-card {
