--- a/style.html
+++ b/style.html
@@ -5164,7 +5164,7 @@ button:disabled {
   border-radius: 12px;
 }
 
-/* ===== BUTTON ===== */
+/* ===== BUTTON ==o==== */
 .skeleton-footer {
   display: flex;
   justify-content: center;
